<resources>
    <string name="app_name">Hahahihi</string>
    <string name="welcome_to_app_name">Welcome to App Name.</string>
    <string name="discovery_amazing_think_near_around_you">Discovery Amazing Think Near Around You.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_x">Sign Up</string>
    <string name="or_connect_using">Or Connect using</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="skip">SKIP</string>
</resources>