<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_secondary"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/bg"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/lita"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="-100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_app_name"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discovery_amazing_think_near_around_you"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button2_background"
                android:textColor="@color/bg"
                android:textSize="16sp"
                android:text="@string/sign_up_x"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_connect_using"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@android:color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_fb"
                    android:background=""
                    android:textColor="@android:color/white"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_twitter"
                    android:background=""
                    android:text="@string/twitter"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_google"
                    android:background=""
                    android:text="@string/google"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_phone"
                    android:background=""
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:gravity="center" />

</LinearLayout>